--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battleship</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css">
 </head>
 
 <body>
-    <h1>Battleship</h1>
+    <header>
+        <h1 class="title">Battleship</h1>
+        <p class="notification">Place the ships.</p>
+        <div></div>
+    </header>
+    <main>
+        <div class="gameboards">
+            <div>
+                <div class="gameboard">
+
+                </div>
+                <p>Your grid</p>
+            </div>
+            <div>
+                <div class="gameboard">
+
+                </div>
+                <p>Computer's grid</p>
+            </div>
+        </div>
+        <div>
+            <div class="randomize">
+                <p>Randomize</p>
+                <span class="mdi mdi-shuffle"></span>
+            </div>
+        </div>
+        <div class="settings">
+            <p>Settings:</p>
+            <div class="checkboxes">
+                <div>
+                    <input type="checkbox" name="mark-verified" id="mark-verified">
+                    <label for="mark-verified">Mark verified empty cells</label>
+                </div>
+                <div>
+                    <input type="checkbox" name="" id="">
+                    <label for="sound-on">Sound on</label>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <p>Author - <a class="author" href="https://github.com/Gideon-D-Adeti" target="_blank">Gideon D. Adeti</a></p>
+    </footer>
 </body>
 
 </html>
