Implement functionality to create gameboards
Restyle UI accordingly.

--- a/src/index.html
+++ b/src/index.html
@@ -11,22 +11,22 @@
 <body>
     <header>
         <h1 class="title">Battleship</h1>
-        <p class="notification">Place the ships.</p>
+        <p class="notification">Place your ships.</p>
         <div></div>
     </header>
     <main>
         <div class="gameboards">
-            <div>
+            <div class="player">
+                <p>Your board</p>
                 <div class="gameboard">
 
                 </div>
-                <p>Your grid</p>
             </div>
-            <div>
+            <div class="computer">
+                <p>Computer's board</p>
                 <div class="gameboard">
 
                 </div>
-                <p>Computer's grid</p>
             </div>
         </div>
         <div>
