Implement functionality to blur computer board before game starts

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
                 <div class="gameboard">
 
                 </div>
+                <button class="start-button">Start Game</button>
             </div>
         </div>
         <div>
